[gd_scene load_steps=10 format=3 uid="uid://dxpdietpijxm4"]

[ext_resource type="PackedScene" uid="uid://dqn121463d5qc" path="res://scenes/enemy/base_enemy_entity.tscn" id="1_x54go"]
[ext_resource type="Script" path="res://scenes/enemy/slime.gd" id="2_rngj6"]
[ext_resource type="PackedScene" uid="uid://cp8m6655jfm1w" path="res://scenes/enemy/slimedeathparticle.tscn" id="3_kfo5d"]

[sub_resource type="Animation" id="Animation_sd0i3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wee3g"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_rcdy2"]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_1rudj"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjhhk"]
_data = {
"RESET": SubResource("Animation_sd0i3"),
"attack": SubResource("Animation_wee3g"),
"death": SubResource("Animation_rcdy2"),
"walk": SubResource("Animation_1rudj")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_l0x1m"]

[node name="Slime" instance=ExtResource("1_x54go")]
script = ExtResource("2_rngj6")
explodeSlimeParticle = ExtResource("3_kfo5d")

[node name="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_jjhhk")
}

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(-1, -7)
scale = Vector2(0.84, 0.56)
shape = SubResource("CircleShape2D_l0x1m")

[node name="Wall_Raycast_Left" parent="Wall_checks" index="0"]
target_position = Vector2(5.76973e-05, 16)

[node name="Wall_Raycast_Right" parent="Wall_checks" index="1"]
target_position = Vector2(-0.0385942, 12.9999)

[node name="Floor_Raycast_Left" parent="Floor_Checks" index="0"]
position = Vector2(-13, 0)

[node name="Floor_Raycast_Right" parent="Floor_Checks" index="1"]
position = Vector2(10, 0)

[node name="Player_Tracker_Pivot" parent="." index="5"]
position = Vector2(0, -7)

[node name="Player_Tracker_Raycast" parent="Player_Tracker_Pivot" index="0"]
position = Vector2(0, 0)
collision_mask = 4
